--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank System</title>
-    <link rel="stylesheet" href="../styles/all.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="./styles/all.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <!-- Google Fonts: Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -15,12 +16,12 @@
     <p>A smart, secure, and seamless banking experience built to simplify your finances and empower your future.</p>
 
     <footer>
-        <a id="create-acc" href="create.html">Create Account</a>
-        <a id="sign-in" href="signIn.html">Sign in</a>
+        <a id="create-acc" href="./pages/create.html">Create Account</a>
+        <a id="sign-in" href="./pages/signIn.html">Sign in</a>
     </footer>
 
 </div>
 
-<script src="../script/index.js" type="module"></script>
+<script src="./script/index.js" type="module"></script>
 </body>
 </html>
