--- a/pages/app.html
+++ b/pages/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank System</title>
     <link rel="stylesheet" href="../styles/all.css">
     <link rel="stylesheet" href="../styles/app.css">
@@ -168,7 +169,7 @@
 
 <footer >
     <div class="footer-wrapper">
-        <a href="index.html" class="choice">
+        <a href="../index.html" class="choice">
             <svg id='Home_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
                  xmlns:xlink='http://www.w3.org/1999/xlink'>
                 <rect width='24' height='24' stroke='none' fill='currentColor' opacity='0'/>
