--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
     <link rel="stylesheet" href="../styles/all.css">
     <link rel="stylesheet" href="../styles/create.css">
@@ -11,7 +12,7 @@
 </head>
 <body>
 <div class="app-wrapper">
-    <a href="index.html" class="go-back">‹</a>
+    <a href="../index.html" class="go-back">‹</a>
     <h2>Sign In</h2>
     <form id="sign-in">
 
