--- a/pages/app.html
+++ b/pages/app.html
@@ -71,7 +71,8 @@
                         <div>Verification code</div>
                         <div id="code-wrapper">
                             <div style="z-index: 300" id="code"></div>
-                            <svg style="z-index: 300" id='copy' width='12' height='12' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
+                            <svg style="z-index: 300" id='copy' width='12' height='12' viewBox='0 0 24 24'
+                                 xmlns='http://www.w3.org/2000/svg'
                                  xmlns:xlink='http://www.w3.org/1999/xlink'>
                                 <rect width='24' height='24' stroke='none' fill='currentColor' opacity='0'/>
                                 <g transform="matrix(1 0 0 1 12 12)">
@@ -124,36 +125,93 @@
             Invoice
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="income">
-        <div class="total">
-            <div class="light">Total</div>
-            <div class="total-sum">0,00 €</div>
+        <div id="income-body">
+            <div id="today">
+                <div class="total">
+                    <div class="light">Total</div>
+                    <div id="today-sum">0,00 €</div>
+                </div>
+                <div class="switch-period">Today</div>
+                <div class="progress-ring">
+                    <svg width="120" height="120">
+                        <circle class="underlay" r="50" cx="60" cy="60"/>
+                        <circle class="progress" r="50" cx="60" cy="60"/>
+                    </svg>
+                    <svg id='credit-card' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
+                         xmlns:xlink='http://www.w3.org/1999/xlink'>
+                        <rect width='24' height='24' stroke='none' fill='#2f2f2f' opacity='0'/>
+                        <g transform="matrix(0.43 0 0 0.43 12 12)">
+                            <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: #232323; fill-rule: nonzero; opacity: 1;"
+                                  transform=" translate(-25, -25)"
+                                  d="M 7 9 C 4.25 9 2 11.25 2 14 L 2 36 C 2 38.75 4.25 41 7 41 L 43 41 C 45.75 41 48 38.75 48 36 L 48 14 C 48 11.25 45.75 9 43 9 Z M 7 11 L 43 11 C 44.667969 11 46 12.332031 46 14 L 46 16 L 4 16 L 4 14 C 4 12.332031 5.332031 11 7 11 Z M 4 21 L 46 21 L 46 36 C 46 37.667969 44.667969 39 43 39 L 7 39 C 5.332031 39 4 37.667969 4 36 Z M 9 24 L 9 26 L 25 26 L 25 24 Z"
+                                  stroke-linecap="round"/>
+                        </g>
+                    </svg>
+                </div>
+                <div class="income-wrapper">+<span id="income">0</span> €</div>
+                <div class="expanse-wrapper">-<span id="expense">0</span> €</div>
+            </div>
+            <div id="total">
+                <div class="total">
+                    <div class="light">Total</div>
+                    <div id="total-sum">0,00 €</div>
+                </div>
+                <div class="switch-period">All</div>
+                <div class="progress-ring">
+                    <svg width="120" height="120">
+                        <circle class="underlay" r="50" cx="60" cy="60"/>
+                        <circle class="progress" r="50" cx="60" cy="60"/>
+                    </svg>
+                    <svg id='credit-card' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
+                         xmlns:xlink='http://www.w3.org/1999/xlink'>
+                        <rect width='24' height='24' stroke='none' fill='#2f2f2f' opacity='0'/>
+                        <g transform="matrix(0.43 0 0 0.43 12 12)">
+                            <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: #232323; fill-rule: nonzero; opacity: 1;"
+                                  transform=" translate(-25, -25)"
+                                  d="M 7 9 C 4.25 9 2 11.25 2 14 L 2 36 C 2 38.75 4.25 41 7 41 L 43 41 C 45.75 41 48 38.75 48 36 L 48 14 C 48 11.25 45.75 9 43 9 Z M 7 11 L 43 11 C 44.667969 11 46 12.332031 46 14 L 46 16 L 4 16 L 4 14 C 4 12.332031 5.332031 11 7 11 Z M 4 21 L 46 21 L 46 36 C 46 37.667969 44.667969 39 43 39 L 7 39 C 5.332031 39 4 37.667969 4 36 Z M 9 24 L 9 26 L 25 26 L 25 24 Z"
+                                  stroke-linecap="round"/>
+                        </g>
+                    </svg>
+                </div>
+                <div class="income-wrapper">+<span id="income-total">0</span> €</div>
+                <div class="expanse-wrapper">-<span id="expense-total">0</span> €</div>
+            </div>
         </div>
-        <div id="switch-period">Today</div>
-        <div class="progress-ring">
-            <svg width="120" height="120">
-                <circle class="underlay" r="50" cx="60" cy="60"/>
-                <circle class="progress" r="50" cx="60" cy="60"/>
-            </svg>
-            <svg id='credit-card' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
-                 xmlns:xlink='http://www.w3.org/1999/xlink'>
-                <rect width='24' height='24' stroke='none' fill='#2f2f2f' opacity='0'/>
-                <g transform="matrix(0.43 0 0 0.43 12 12)">
-                    <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: #232323; fill-rule: nonzero; opacity: 1;"
-                          transform=" translate(-25, -25)"
-                          d="M 7 9 C 4.25 9 2 11.25 2 14 L 2 36 C 2 38.75 4.25 41 7 41 L 43 41 C 45.75 41 48 38.75 48 36 L 48 14 C 48 11.25 45.75 9 43 9 Z M 7 11 L 43 11 C 44.667969 11 46 12.332031 46 14 L 46 16 L 4 16 L 4 14 C 4 12.332031 5.332031 11 7 11 Z M 4 21 L 46 21 L 46 36 C 46 37.667969 44.667969 39 43 39 L 7 39 C 5.332031 39 4 37.667969 4 36 Z M 9 24 L 9 26 L 25 26 L 25 24 Z"
-                          stroke-linecap="round"/>
-                </g>
-            </svg>
-        </div>
-        <div class="income-wrapper">+<span id="income">0</span> €</div>
-        <div class="expanse-wrapper">-<span id="expense">0</span> €</div>
         <div class="dots">
-            <div class="dot">⬤</div>
-            <div class="dot">⬤</div>
-            <div class="dot">⬤</div>
+            <div class="current-dot">⬤</div>
+            <div >⬤</div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </div>
 <div class="bottom app-wrapper">
@@ -167,7 +225,7 @@
 </div>
 
 
-<footer >
+<footer>
     <div class="footer-wrapper">
         <a href="../index.html" class="choice">
             <svg id='Home_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
@@ -181,7 +239,7 @@
                 </g>
             </svg>
         </a>
-        <a class="choice">
+        <a id="goToWallet" class="choice">
             <svg id='Wallet_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
                  xmlns:xlink='http://www.w3.org/1999/xlink'>
                 <rect width='24' height='24' stroke='none' fill='none' opacity='0'/>
@@ -193,7 +251,7 @@
                 </g>
             </svg>
         </a>
-        <a class="choice">
+        <a id="goToGraph" class="choice">
             <svg id='Pie_Chart_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
                  xmlns:xlink='http://www.w3.org/1999/xlink'>
                 <rect width='24' height='24' stroke='none' fill='none' opacity='0'/>
@@ -205,10 +263,15 @@
                 </g>
             </svg>
         </a>
-        <a class="choice">
-            <svg id='Transaction_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
-                <g transform="matrix(1 0 0 1 12 12)" >
-                    <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: currentColor; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -12)" d="M 12 2 C 8.4698803 2 5.3751076 3.8338555 3.5957031 6.5957031 L 2 5 L 2 10 L 7 10 L 5.0546875 8.0546875 C 6.4299889 5.6361564 9.0193417 4 12 4 C 16.418 4 20 7.582 20 12 C 20 16.418 16.418 20 12 20 C 11.404 20 10.811328 19.934687 10.236328 19.804688 L 9.796875 21.755859 C 10.515875 21.917859 11.257 22 12 22 C 17.523 22 22 17.523 22 12 C 22 6.477 17.523 2 12 2 z M 11.712891 6 L 11.712891 7.078125 C 11.373891 7.121125 9.4765625 7.4775781 9.4765625 9.7675781 C 9.4765625 13.108578 12.935547 12.120609 12.935547 14.349609 C 12.935547 15.465609 12.213406 15.492188 12.066406 15.492188 C 11.932406 15.492188 11.052734 15.563469 11.052734 13.855469 L 9.1621094 13.855469 C 9.1621094 16.747469 11.260266 16.976531 11.572266 17.019531 L 11.572266 18 L 12.574219 18 L 12.574219 17.019531 C 12.912219 16.977531 14.824219 16.663937 14.824219 14.335938 C 14.824219 11.129938 11.366234 11.743344 11.365234 9.7773438 C 11.365234 8.6503437 11.985141 8.6152344 12.119141 8.6152344 C 12.364141 8.6152344 12.947266 8.830125 12.947266 10.203125 L 14.837891 10.203125 C 14.837891 7.576125 13.041703 7.1664687 12.720703 7.1054688 L 12.720703 6 L 11.712891 6 z M 2 12 L 2.0019531 12.158203 C 2.0129531 12.900203 2.1062969 13.639469 2.2792969 14.355469 L 4.2246094 13.888672 C 4.0856094 13.315672 4.0109531 12.721953 4.0019531 12.126953 L 4 12 L 2 12 z M 4.828125 15.552734 L 3.0371094 16.443359 C 3.3671094 17.104359 3.7702813 17.732641 4.2382812 18.306641 L 5.7890625 17.044922 C 5.4150625 16.584922 5.092125 16.082734 4.828125 15.552734 z M 7.0546875 18.289062 L 5.8164062 19.859375 C 6.3994063 20.318375 7.0322188 20.71325 7.6992188 21.03125 L 8.5605469 19.226562 C 8.0265469 18.971562 7.5206875 18.656063 7.0546875 18.289062 z" stroke-linecap="round" />
+        <a id="goToTransactions" class="choice">
+            <svg id='Transaction_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
+                 xmlns:xlink='http://www.w3.org/1999/xlink'>
+                <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+                <g transform="matrix(1 0 0 1 12 12)">
+                    <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: currentColor; fill-rule: nonzero; opacity: 1;"
+                          transform=" translate(-12, -12)"
+                          d="M 12 2 C 8.4698803 2 5.3751076 3.8338555 3.5957031 6.5957031 L 2 5 L 2 10 L 7 10 L 5.0546875 8.0546875 C 6.4299889 5.6361564 9.0193417 4 12 4 C 16.418 4 20 7.582 20 12 C 20 16.418 16.418 20 12 20 C 11.404 20 10.811328 19.934687 10.236328 19.804688 L 9.796875 21.755859 C 10.515875 21.917859 11.257 22 12 22 C 17.523 22 22 17.523 22 12 C 22 6.477 17.523 2 12 2 z M 11.712891 6 L 11.712891 7.078125 C 11.373891 7.121125 9.4765625 7.4775781 9.4765625 9.7675781 C 9.4765625 13.108578 12.935547 12.120609 12.935547 14.349609 C 12.935547 15.465609 12.213406 15.492188 12.066406 15.492188 C 11.932406 15.492188 11.052734 15.563469 11.052734 13.855469 L 9.1621094 13.855469 C 9.1621094 16.747469 11.260266 16.976531 11.572266 17.019531 L 11.572266 18 L 12.574219 18 L 12.574219 17.019531 C 12.912219 16.977531 14.824219 16.663937 14.824219 14.335938 C 14.824219 11.129938 11.366234 11.743344 11.365234 9.7773438 C 11.365234 8.6503437 11.985141 8.6152344 12.119141 8.6152344 C 12.364141 8.6152344 12.947266 8.830125 12.947266 10.203125 L 14.837891 10.203125 C 14.837891 7.576125 13.041703 7.1664687 12.720703 7.1054688 L 12.720703 6 L 11.712891 6 z M 2 12 L 2.0019531 12.158203 C 2.0129531 12.900203 2.1062969 13.639469 2.2792969 14.355469 L 4.2246094 13.888672 C 4.0856094 13.315672 4.0109531 12.721953 4.0019531 12.126953 L 4 12 L 2 12 z M 4.828125 15.552734 L 3.0371094 16.443359 C 3.3671094 17.104359 3.7702813 17.732641 4.2382812 18.306641 L 5.7890625 17.044922 C 5.4150625 16.584922 5.092125 16.082734 4.828125 15.552734 z M 7.0546875 18.289062 L 5.8164062 19.859375 C 6.3994063 20.318375 7.0322188 20.71325 7.6992188 21.03125 L 8.5605469 19.226562 C 8.0265469 18.971562 7.5206875 18.656063 7.0546875 18.289062 z"
+                          stroke-linecap="round"/>
                 </g>
             </svg>
         </a>
@@ -222,7 +285,31 @@
 
             <label for="amount">Amount</label>
             <input id="amount" type="number" name="amount" required min="1">
-
+            <div class="loading">
+                <img class="loadingG" src="../imgs/loading.gif">
+                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
+                     xmlns:xlink='http://www.w3.org/1999/xlink'>
+                    <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+                    <g transform="matrix(1 0 0 1 12 12)">
+                        <g style="">
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                      transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z"
+                                      stroke-linecap="round"/>
+                            </g>
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <circle style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                        cx="0" cy="0" r="9"/>
+                            </g>
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <path style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                      transform=" translate(-12, -12)" d="M 9 12 L 11 14 L 15 10"
+                                      stroke-linecap="round"/>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
             <button type="submit" class="button">Send</button>
         </form>
     </div>
@@ -238,7 +325,31 @@
 
             <label for="v-code">Verification Code</label>
             <input id="v-code" type="number" name="v-code" required minlength="3" maxlength="3">
-
+            <div class="loading">
+                <img class="loadingG" src="../imgs/loading.gif">
+                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
+                     xmlns:xlink='http://www.w3.org/1999/xlink'>
+                    <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+                    <g transform="matrix(1 0 0 1 12 12)">
+                        <g style="">
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                      transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z"
+                                      stroke-linecap="round"/>
+                            </g>
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <circle style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                        cx="0" cy="0" r="9"/>
+                            </g>
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <path style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                      transform=" translate(-12, -12)" d="M 9 12 L 11 14 L 15 10"
+                                      stroke-linecap="round"/>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
             <button type="submit" class="button">Send</button>
         </form>
     </div>
@@ -256,7 +367,31 @@
             <select name="send-to" id="send-to">
                 <option value=""></option>
             </select>
-
+            <div class="loading">
+                <img class="loadingG" src="../imgs/loading.gif">
+                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
+                     xmlns:xlink='http://www.w3.org/1999/xlink'>
+                    <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+                    <g transform="matrix(1 0 0 1 12 12)">
+                        <g style="">
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                      transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z"
+                                      stroke-linecap="round"/>
+                            </g>
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <circle style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                        cx="0" cy="0" r="9"/>
+                            </g>
+                            <g transform="matrix(1 0 0 1 0 0)">
+                                <path style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
+                                      transform=" translate(-12, -12)" d="M 9 12 L 11 14 L 15 10"
+                                      stroke-linecap="round"/>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
             <button type="submit" class="button">Send</button>
         </form>
     </div>
