--- a/pages/app.html
+++ b/pages/app.html
@@ -174,7 +174,7 @@
                 <div class="progress-ring">
                     <svg width="120" height="120">
                         <circle class="underlay" r="50" cx="60" cy="60"/>
-                        <circle class="progress" r="50" cx="60" cy="60"/>
+                        <circle class="progress all" r="50" cx="60" cy="60"/>
                     </svg>
                     <svg id='credit-card' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
                          xmlns:xlink='http://www.w3.org/1999/xlink'>
@@ -239,7 +239,7 @@
                 </g>
             </svg>
         </a>
-        <a id="goToWallet" class="choice">
+        <div id="goToWallet" class="choice">
             <svg id='Wallet_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
                  xmlns:xlink='http://www.w3.org/1999/xlink'>
                 <rect width='24' height='24' stroke='none' fill='none' opacity='0'/>
@@ -250,8 +250,8 @@
                           stroke-linecap="round"/>
                 </g>
             </svg>
-        </a>
-        <a id="goToGraph" class="choice">
+        </div>
+        <div id="goToGraph" class="choice">
             <svg id='Pie_Chart_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
                  xmlns:xlink='http://www.w3.org/1999/xlink'>
                 <rect width='24' height='24' stroke='none' fill='none' opacity='0'/>
@@ -262,8 +262,8 @@
                           stroke-linecap="round"/>
                 </g>
             </svg>
-        </a>
-        <a id="goToTransactions" class="choice">
+        </div>
+        <div id="goToTransactions" class="choice">
             <svg id='Transaction_24' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
                  xmlns:xlink='http://www.w3.org/1999/xlink'>
                 <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
@@ -274,7 +274,7 @@
                           stroke-linecap="round"/>
                 </g>
             </svg>
-        </a>
+        </div>
     </div>
 </footer>
 <div id="deposit" class="app-wrapper formular-wrapper">
