--- a/pages/app.html
+++ b/pages/app.html
@@ -287,24 +287,14 @@
             <input id="amount" type="number" name="amount" required min="1">
             <div class="loading">
                 <img class="loadingG" src="../imgs/loading.gif">
-                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
-                     xmlns:xlink='http://www.w3.org/1999/xlink'>
-                    <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
-                    <g transform="matrix(1 0 0 1 12 12)">
-                        <g style="">
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                      transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z"
-                                      stroke-linecap="round"/>
+                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+                    <g transform="matrix(1 0 0 1 12 12)" >
+                        <g style="" >
+                            <g transform="matrix(1 0 0 1 0 0)" >
+                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z" stroke-linecap="round" />
                             </g>
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <circle style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                        cx="0" cy="0" r="9"/>
-                            </g>
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <path style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                      transform=" translate(-12, -12)" d="M 9 12 L 11 14 L 15 10"
-                                      stroke-linecap="round"/>
+                            <g transform="matrix(1 0 0 1 0 0)" >
+                                <path style="stroke: currentColor; stroke-width: 0; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: currentColor; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -12)" d="M 17 3.34 C 21.16740029312433 5.746207880109765 23.030024165425868 10.779378573364522 21.43300000817871 15.318825170319277 C 19.835975850931554 19.858271767274033 15.23225226379946 22.616514695369712 10.476248619509064 21.88337698597837 C 5.720244975218673 21.150239276587026 2.160860838564526 17.133653726042766 2.0050000000000026 12.324000000000002 L 2.000000000000001 12 L 2.005000000000001 11.676 C 2.1189194129534243 8.16298237883758 4.068821743519835 4.967703609728217 7.140892224900323 3.2598823671281654 C 10.21296270628081 1.5520611245281142 13.95608977868455 1.5824787330399985 16.999999999999996 3.339999999999998 z M 15.707 9.293 C 15.35073146676109 8.936764925727925 14.785085272281762 8.901197778650817 14.387 9.209999999999999 L 14.293000000000001 9.293 L 11 12.584999999999999 L 9.707 11.293 L 9.613000000000001 11.209999999999999 C 9.214897721884041 10.901423126905328 8.649426168384636 10.937098841308096 8.293262504846366 11.293262504846364 C 7.937098841308098 11.649426168384634 7.901423126905329 12.21489772188404 8.21 12.613 L 8.293000000000001 12.706999999999999 L 10.293000000000001 14.706999999999999 L 10.387 14.79 C 10.747743680352452 15.069889457277279 11.252256319647548 15.069889457277279 11.613 14.79 L 11.706999999999999 14.706999999999999 L 15.706999999999999 10.706999999999999 L 15.79 10.613 C 16.09880222134918 10.214914727718238 16.06323507427207 9.64926853323891 15.706999999999999 9.293 z" stroke-linecap="round" />
                             </g>
                         </g>
                     </g>
@@ -327,24 +317,14 @@
             <input id="v-code" type="number" name="v-code" required minlength="3" maxlength="3">
             <div class="loading">
                 <img class="loadingG" src="../imgs/loading.gif">
-                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
-                     xmlns:xlink='http://www.w3.org/1999/xlink'>
-                    <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
-                    <g transform="matrix(1 0 0 1 12 12)">
-                        <g style="">
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                      transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z"
-                                      stroke-linecap="round"/>
+                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+                    <g transform="matrix(1 0 0 1 12 12)" >
+                        <g style="" >
+                            <g transform="matrix(1 0 0 1 0 0)" >
+                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z" stroke-linecap="round" />
                             </g>
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <circle style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                        cx="0" cy="0" r="9"/>
-                            </g>
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <path style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                      transform=" translate(-12, -12)" d="M 9 12 L 11 14 L 15 10"
-                                      stroke-linecap="round"/>
+                            <g transform="matrix(1 0 0 1 0 0)" >
+                                <path style="stroke: currentColor; stroke-width: 0; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: currentColor; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -12)" d="M 17 3.34 C 21.16740029312433 5.746207880109765 23.030024165425868 10.779378573364522 21.43300000817871 15.318825170319277 C 19.835975850931554 19.858271767274033 15.23225226379946 22.616514695369712 10.476248619509064 21.88337698597837 C 5.720244975218673 21.150239276587026 2.160860838564526 17.133653726042766 2.0050000000000026 12.324000000000002 L 2.000000000000001 12 L 2.005000000000001 11.676 C 2.1189194129534243 8.16298237883758 4.068821743519835 4.967703609728217 7.140892224900323 3.2598823671281654 C 10.21296270628081 1.5520611245281142 13.95608977868455 1.5824787330399985 16.999999999999996 3.339999999999998 z M 15.707 9.293 C 15.35073146676109 8.936764925727925 14.785085272281762 8.901197778650817 14.387 9.209999999999999 L 14.293000000000001 9.293 L 11 12.584999999999999 L 9.707 11.293 L 9.613000000000001 11.209999999999999 C 9.214897721884041 10.901423126905328 8.649426168384636 10.937098841308096 8.293262504846366 11.293262504846364 C 7.937098841308098 11.649426168384634 7.901423126905329 12.21489772188404 8.21 12.613 L 8.293000000000001 12.706999999999999 L 10.293000000000001 14.706999999999999 L 10.387 14.79 C 10.747743680352452 15.069889457277279 11.252256319647548 15.069889457277279 11.613 14.79 L 11.706999999999999 14.706999999999999 L 15.706999999999999 10.706999999999999 L 15.79 10.613 C 16.09880222134918 10.214914727718238 16.06323507427207 9.64926853323891 15.706999999999999 9.293 z" stroke-linecap="round" />
                             </g>
                         </g>
                     </g>
@@ -369,24 +349,14 @@
             </select>
             <div class="loading">
                 <img class="loadingG" src="../imgs/loading.gif">
-                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'
-                     xmlns:xlink='http://www.w3.org/1999/xlink'>
-                    <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
-                    <g transform="matrix(1 0 0 1 12 12)">
-                        <g style="">
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                      transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z"
-                                      stroke-linecap="round"/>
+                <svg class='loadingDone' width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+                    <g transform="matrix(1 0 0 1 12 12)" >
+                        <g style="" >
+                            <g transform="matrix(1 0 0 1 0 0)" >
+                                <path style="stroke: none; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -12)" d="M 0 0 L 24 0 L 24 24 L 0 24 z" stroke-linecap="round" />
                             </g>
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <circle style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                        cx="0" cy="0" r="9"/>
-                            </g>
-                            <g transform="matrix(1 0 0 1 0 0)">
-                                <path style="stroke: currentColor; stroke-width: 2; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;"
-                                      transform=" translate(-12, -12)" d="M 9 12 L 11 14 L 15 10"
-                                      stroke-linecap="round"/>
+                            <g transform="matrix(1 0 0 1 0 0)" >
+                                <path style="stroke: currentColor; stroke-width: 0; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: currentColor; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -12)" d="M 17 3.34 C 21.16740029312433 5.746207880109765 23.030024165425868 10.779378573364522 21.43300000817871 15.318825170319277 C 19.835975850931554 19.858271767274033 15.23225226379946 22.616514695369712 10.476248619509064 21.88337698597837 C 5.720244975218673 21.150239276587026 2.160860838564526 17.133653726042766 2.0050000000000026 12.324000000000002 L 2.000000000000001 12 L 2.005000000000001 11.676 C 2.1189194129534243 8.16298237883758 4.068821743519835 4.967703609728217 7.140892224900323 3.2598823671281654 C 10.21296270628081 1.5520611245281142 13.95608977868455 1.5824787330399985 16.999999999999996 3.339999999999998 z M 15.707 9.293 C 15.35073146676109 8.936764925727925 14.785085272281762 8.901197778650817 14.387 9.209999999999999 L 14.293000000000001 9.293 L 11 12.584999999999999 L 9.707 11.293 L 9.613000000000001 11.209999999999999 C 9.214897721884041 10.901423126905328 8.649426168384636 10.937098841308096 8.293262504846366 11.293262504846364 C 7.937098841308098 11.649426168384634 7.901423126905329 12.21489772188404 8.21 12.613 L 8.293000000000001 12.706999999999999 L 10.293000000000001 14.706999999999999 L 10.387 14.79 C 10.747743680352452 15.069889457277279 11.252256319647548 15.069889457277279 11.613 14.79 L 11.706999999999999 14.706999999999999 L 15.706999999999999 10.706999999999999 L 15.79 10.613 C 16.09880222134918 10.214914727718238 16.06323507427207 9.64926853323891 15.706999999999999 9.293 z" stroke-linecap="round" />
                             </g>
                         </g>
                     </g>
